v0.3.5:
    - Fixed insertion issue in case another UberASM code uses nested namespaces, for example Dynamic Z (thanks to Alex for reporting this).
    - Added label definition for each Retry freeram define so that they can be referenced by other UberASM codes without having to copy-paste the defines in the other files.
    - Made vanilla Boo Ring's angle reset on death for consistency.

v0.3.4:
    - Fixed issue where using $0DAA-$0DAD to disable pressing select wouldn't stop Retry from exiting the level when holding the select button.
    - Better handling of the !fast_prompt option in the code.
    - Restored Retry patch feature where pressing A/B during the death animation makes the prompt show immediately (when not using !fast_prompt == 1).
    - Fixed issue where dying in the intro level and retrying would send you to level 0 (thanks to Selicre for reporting this).
    - Added !prompt_freeze setting to allow to keep sprites and animations running while the Retry prompt is shown.
    - Added !exit_animation setting to allow to skip the death animation when using the "Exit" prompt option.

v0.3.3:
    - Fixed issue where the saved data wouldn't get reloaded after going to the game over screen, which could cause, for example, unsaved checkpoints to be retained after getting a game over (thanks to simon.caio for reporting this).
    - Added new section to the "save" and "sram_defaults" table to put addresses that won't be reloaded from SRAM when getting a game over, and added a "!save_after_game_over" setting to save the game after a game over. Both of these options together can help having some addresses that don't get reloaded from SRAM when getting a game over (if you want the player to retain them even if they didn't get the chance to save the game, for example individual Dragon Coins or the death counter), and ensuring that they actually get saved to SRAM right after (thanks to simon.caio for the idea).